# AdvancedPasswordManager

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/modules/: encryption.py  menu.py
db/: masterpassword.json
src/advancedpasswordmanager/: main.py
src/apasswordmanager/: main.py
